// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pithos --help (top-level) > top-level help matches snapshot 1`] = `
"pithos - local control plane for coordinating Claude Code agents

Usage: pithos <command> [options]

Commands:
  init                  Create DB, run migrations, default global scope
  scope upsert          Register global/repo/worktree scope
  run register          Register a Claude Code/worker/agent run
  run end               Mark a run ended/failed/cancelled
  heartbeat             Update run heartbeat; optionally advance task to running
  enqueue               Create a queued task and event
  claim                 Atomically claim one queued task for a run
  complete              Complete task if run owns current fencing token
  fail                  Fail task if run owns current fencing token
  artifact add          Attach a completion report/design brief/status artifact
  inspect               Inspect task/run/scope/artifact
  briefing              Render Pandora briefing with as_of_event_id watermark
  tail                  Show recent events
  sweep                 Expire leases, mark stale runs, requeue eligible tasks

Global options:
  --help, -h            Show this help
  --version, -v         Show version

Environment:
  PITHOS_DB             SQLite DB path (default: ~/.pandora/pithos.sqlite)
  PITHOS_RUN_ID         Current run ID for hooks/agents
  PITHOS_TASK_ID        Current claimed task ID
  PITHOS_FENCING_TOKEN  Current task claim token
  PITHOS_SCOPE_ID       Scope hint for current session
  PITHOS_OUTPUT         Output format: json or text (default: json)

Exit codes:
  0  Success
  1  General/user error
  2  Validation error
  3  Not found
  4  Stale lease/fencing token
  5  No claimable work

Run \`pithos <command> --help\` for command-specific usage.

"
`;

exports[`pithos artifact --help > artifact add --help matches snapshot 1`] = `
"pithos artifact add - Attach an artifact to a task

Usage:
  pithos artifact add --task <task-id> --run <run-id> --kind <kind> --title <title> [options]

Options:
  --task <task-id>    Task to attach the artifact to [required]
  --run <run-id>      Run that is producing the artifact [required]
  --kind <kind>       Artifact kind, e.g. worker-completion, design-brief [required]
  --title <title>     Human-readable title for the artifact [required]
  --body-file <path>  Path to a file whose content becomes the artifact body
  --help, -h          Show this help

Output (JSON):
  { "ok": true, "artifact": { "id": "artifact_...", "kind": "...", "title": "...", ... } }

Examples:
  pithos artifact add --task task_abc --run run_xyz --kind worker-completion --title "Worker report" --body-file report.md
  pithos artifact add --task task_abc --run run_xyz --kind design-brief --title "Design notes"

Exit codes: 0 success | 2 validation error | 3 not found

"
`;

exports[`pithos artifact --help > matches snapshot 1`] = `
"pithos artifact - Manage pithos artifacts

Usage:
  pithos artifact <subcommand> [options]

Subcommands:
  add    Attach a completion report, design brief, or status artifact to a task

Options:
  --help, -h    Show this help

Examples:
  pithos artifact add --task task_abc --run run_xyz --kind worker-completion --title "Report" --body-file report.md

Run \`pithos artifact <subcommand> --help\` for subcommand-specific usage.

Exit codes: 0 success | 2 validation error | 3 not found

"
`;

exports[`pithos briefing --help > matches snapshot 1`] = `
"pithos briefing - Render a concise Pandora briefing

Usage:
  pithos briefing [options]

Options:
  --agent <name>   Agent perspective for the briefing (default: pandora; only pandora is supported)
  --help, -h       Show this help

Output (markdown):
  ## Pandora briefing

  as_of_event_id: <n>

  ### Needs Adam
  - dead_letter tasks and question artifacts requiring human attention

  ### Ready for review
  - done tasks with their worker-completion and design-brief artifact summaries

  ### Active
  - queued, claimed, and running tasks (work in the pipeline)

  ### Stale / failed
  - runs marked stale or with heartbeat older than 15 minutes, plus failed tasks

Notes:
  - as_of_event_id is the latest event ID at render time; use it as a briefing watermark.
  - All DB reads run inside a single transaction so the watermark and rows are consistent.
  - Cancelled tasks are excluded.
  - Stale run detection uses the same 15-minute heartbeat threshold as pithos sweep.
  - The renderer formats raw facts; Pandora interprets them. No summarisation in code.

Examples:
  pithos briefing
  pithos briefing --agent pandora

Exit codes: 0 success | 2 validation error

"
`;

exports[`pithos claim --help > matches snapshot 1`] = `
"pithos claim - Atomically claim one queued task for a run

Usage:
  pithos claim --run <run-id> --scope <scope-id> --capability <cap> [options]

Options:
  --run <run-id>         Run ID claiming the task [required]
  --scope <scope-id>     Scope to search within [required]
  --capability <cap>     Task capability to match [required]
  --lease-minutes <n>    Lease duration in minutes (default: 10)
  --help, -h             Show this help

Output (JSON, success):
  { "ok": true, "task": { "id": "task_...", "scope_id": "...", "capability": "...", "fencing_token": 1, "lease_until": "...", ... } }

Output (JSON, no work):
  { "ok": false, "error": "no_claimable_work" }

Notes:
  - Claims the oldest queued task matching the scope and capability (FIFO).
  - The fencing_token must be passed to complete/fail/heartbeat commands.
  - A task can only be held by one run; concurrent claims are safe.

Examples:
  pithos claim --run run_abc --scope global --capability triage
  pithos claim --run run_abc --scope repo:work/perkbox/protobuf --capability watch --lease-minutes 20

Exit codes: 0 success | 2 validation error | 3 not found (run) | 5 no claimable work

"
`;

exports[`pithos complete --help > matches snapshot 1`] = `
"pithos complete - Complete a claimed/running task with fencing-token check

Usage:
  pithos complete <task-id> --run <run-id> --token <n> [options]

Arguments:
  <task-id>              Task ID to complete [required]

Options:
  --run <run-id>         Run ID that owns the task [required]
  --token <n>            Fencing token from the claim response [required]
  --result-file <path>   Path to a JSON file to store as the task result
  --help, -h             Show this help

Output (JSON, success):
  { "ok": true, "task": { "id": "task_...", "status": "done", "completed_at": "...", ... } }

Notes:
  - The run must be the current lease owner and the token must match.
  - Any other owner, wrong token, or wrong task status returns exit code 4.
  - result-file must be valid JSON; its content is stored in result_json.

Examples:
  pithos complete task_abc --run run_xyz --token 1
  pithos complete task_abc --run run_xyz --token 1 --result-file ./result.json

Exit codes: 0 success | 2 validation error | 4 stale token

"
`;

exports[`pithos enqueue --help > matches snapshot 1`] = `
"pithos enqueue - Create a queued task

Usage:
  pithos enqueue --scope <scope-id> --capability <cap> --title <title> [options]

Options:
  --scope <scope-id>     Scope ID for this task [required]
  --capability <cap>     Task capability, e.g. watch, triage [required]
  --title <title>        Human-readable task title [required]
  --body-file <path>     File path for task body/description (mutually exclusive with --body)
  --body <text>          Inline task body (mutually exclusive with --body-file)
  --run <run-id>         Run ID to record as the task creator
  --parent-id <task-id>  Parent task ID for subtasks
  --help, -h             Show this help

Output (JSON):
  { "ok": true, "task": { "id": "task_...", "scope_id": "...", "status": "queued", ... } }

Examples:
  pithos enqueue --scope global --capability triage --title "Review PR #42"
  pithos enqueue --scope repo:work/perkbox-services/protobuf --capability watch --title "Watch worker" --body-file task.md

Exit codes: 0 success | 2 validation error | 3 not found (scope)

"
`;

exports[`pithos fail --help > matches snapshot 1`] = `
"pithos fail - Fail a claimed/running task with fencing-token check

Usage:
  pithos fail <task-id> --run <run-id> --token <n> [options]

Arguments:
  <task-id>              Task ID to fail [required]

Options:
  --run <run-id>         Run ID that owns the task [required]
  --token <n>            Fencing token from the claim response [required]
  --reason <text>        Human-readable failure reason stored in result_json
  --help, -h             Show this help

Output (JSON, success):
  { "ok": true, "task": { "id": "task_...", "status": "failed", ... } }

Notes:
  - The run must be the current lease owner and the token must match.
  - Any other owner, wrong token, or wrong task status returns exit code 4.
  - The reason string is stored in result_json as { "reason": "..." }.

Examples:
  pithos fail task_abc --run run_xyz --token 1 --reason "worker disappeared"
  pithos fail task_abc --run run_xyz --token 1

Exit codes: 0 success | 2 validation error | 4 stale token

"
`;

exports[`pithos heartbeat --help > matches snapshot 1`] = `
"pithos heartbeat - Update mutable run heartbeat; optionally advance task to running

Usage:
  pithos heartbeat --run <run-id> [options]

Options:
  --run <run-id>             Run ID to heartbeat [required]
  --task <task-id>           Task ID to advance from claimed to running
  --token <n>                Fencing token for the claimed task [required with --task]
  --hook <hook-name>         Hook name, e.g. PreToolUse, SessionStart, SessionEnd, Stop, StopFailure
  --throttle-seconds <n>     Skip writes if last heartbeat is newer than N seconds
                             (lifecycle hooks bypass throttle: SessionStart, SessionEnd, Stop, StopFailure)
  --help, -h                 Show this help

Output (JSON, written):
  { "ok": true, "skipped": false, "run": { ... } }
  { "ok": true, "skipped": false, "run": { ... }, "task": { ... } }   (when --task given)

Output (JSON, throttled):
  { "ok": true, "skipped": true, "run": { ... } }

Notes:
  - Advances run status from 'starting' to 'running' on first heartbeat.
  - When --task + --token: moves task from 'claimed' to 'running' and extends lease by 10 minutes.
  - Stale token rejects the heartbeat (exit code 4); no state is mutated.
  - Stale token is rejected even inside a throttle window.
  - Throttled heartbeats return exit code 0 with skipped:true.

Examples:
  pithos heartbeat --run run_abc
  pithos heartbeat --run run_abc --hook PreToolUse --throttle-seconds 60
  pithos heartbeat --run run_abc --task task_xyz --token 1 --hook UserPromptSubmit

Exit codes: 0 success (including throttled) | 2 validation error | 3 not found | 4 stale token

"
`;

exports[`pithos init --help > matches snapshot 1`] = `
"pithos init - Create DB, run migrations, ensure default global scope

Usage:
  pithos init

Options:
  --help, -h   Show this help

Output (JSON):
  { "ok": true, "initialized": true }

Notes:
  - Creates the SQLite database if it does not exist.
  - Applies all pending migrations.
  - Ensures the built-in global scope ('global') exists.
  - Idempotent: safe to run multiple times.
  - DB path is controlled by PITHOS_DB (default: ~/.pandora/pithos.sqlite).

Examples:
  pithos init
  PITHOS_DB=/tmp/test.sqlite pithos init

Exit codes: 0 success | 1 general error

"
`;

exports[`pithos inspect --help > matches snapshot 1`] = `
"pithos inspect - Inspect a pithos entity

Usage:
  pithos inspect scope <id>
  pithos inspect run <id>
  pithos inspect task <id>

Options:
  --help, -h    Show this help

Subcommands:
  scope <id>    Show a scope by ID
  run <id>      Show a run by ID
  task <id>     Show a task by ID (includes artifacts array)

Output (JSON):
  { "ok": true, "scope": { "id": "...", "kind": "...", ... } }
  { "ok": true, "run": { "id": "...", "agent_kind": "...", ... } }
  { "ok": true, "task": { "id": "...", "status": "queued", ... }, "artifacts": [ ... ] }

Examples:
  pithos inspect scope global
  pithos inspect scope repo:work/perkbox-services/protobuf
  pithos inspect run run_abc123
  pithos inspect task task_abc123

Exit codes: 0 success | 3 not found

"
`;

exports[`pithos run --help > matches snapshot 1`] = `
"pithos run - Manage pithos runs (Claude Code / worker / agent sessions)

Usage:
  pithos run <subcommand> [options]

Subcommands:
  register    Register a new run and return its ID
  end         Mark a run ended/failed/cancelled

Options:
  --help, -h    Show this help

Examples:
  pithos run register --agent-kind envy --scope repo:work/perkbox-services/protobuf
  pithos run end --run run_abc --status ended

Run \`pithos run <subcommand> --help\` for subcommand-specific usage.

Exit codes: 0 success | 2 validation error | 3 not found

"
`;

exports[`pithos run --help > run end --help matches snapshot 1`] = `
"pithos run end - Mark a run as ended/failed/cancelled

Usage:
  pithos run end --run <run-id> [options]

Options:
  --run <run-id>      Run ID to terminate [required]
  --status <status>   Terminal status: ended | failed | cancelled (default: ended)
  --summary <text>    Optional last summary for the run
  --help, -h          Show this help

Output (JSON):
  { "ok": true, "run": { "id": "run_...", "status": "ended", "ended_at": "...", ... } }

Examples:
  pithos run end --run run_abc
  pithos run end --run run_abc --status failed --summary "worker disappeared"

Exit codes: 0 success | 2 validation error | 3 not found

"
`;

exports[`pithos run --help > run register --help matches snapshot 1`] = `
"pithos run register - Register a Claude Code/worker/agent run

Usage:
  pithos run register --agent-kind <kind> [options]

Options:
  --agent-kind <kind>    Agent kind, e.g. envy, toil, worker [required]
  --scope <scope-id>     Scope ID for this run
  --cwd <path>           Working directory for this run
  --session-id <uuid>    Claude Code session ID
  --parent-run <run-id>  Parent run ID (for child/worker runs)
  --run <run-id>         Explicit ID; returns existing run if already registered (idempotent)
  --help, -h             Show this help

Output (JSON):
  { "ok": true, "run": { "id": "run_...", "agent_kind": "...", "status": "starting", ... } }

Examples:
  pithos run register --agent-kind envy --scope repo:work/perkbox-services/protobuf --cwd /home/user/work
  pithos run register --agent-kind worker --parent-run run_abc --session-id abc123

Exit codes: 0 success | 2 validation error

"
`;

exports[`pithos scope --help > matches snapshot 1`] = `
"pithos scope - Manage pithos scopes

Usage:
  pithos scope <subcommand> [options]

Subcommands:
  upsert    Register or update a global/repo/worktree scope

Options:
  --help, -h    Show this help

Examples:
  pithos scope upsert --path ~/work/perkbox-services/protobuf
  pithos scope upsert --kind global

Run \`pithos scope <subcommand> --help\` for subcommand-specific usage.

Exit codes: 0 success | 2 validation error

"
`;

exports[`pithos scope --help > scope upsert --help matches snapshot 1`] = `
"pithos scope upsert - Register a scope (global/repo/worktree)

Usage:
  pithos scope upsert --path <path> [--kind <kind>]

Options:
  --path <path>   Filesystem path for the scope (required for repo/worktree)
  --kind <kind>   Scope kind: global | repo | worktree (default: repo)
  --help, -h      Show this help

Output (JSON):
  { "ok": true, "scope": { "id": "...", "kind": "...", "name": "...", "canonical_path": "..." } }

Examples:
  pithos scope upsert --path ~/work/perkbox-services/protobuf
  pithos scope upsert --kind worktree --path ~/work/perkbox-services/protobuf__feature
  pithos scope upsert --kind global

Notes:
  - Scope IDs are home-relative: ~/work/foo → repo:work/foo
  - Calling upsert twice with the same path is idempotent.

Exit codes: 0 success | 2 validation error

"
`;

exports[`pithos sweep --help > matches snapshot 1`] = `
"pithos sweep - Expire leases, mark stale runs, requeue or dead-letter tasks

Usage:
  pithos sweep [options]

Options:
  --lease-grace-seconds <n>   Grace period past lease_until before a task is considered expired (default: 0)
  --run-stale-minutes <n>     Minutes since last heartbeat before a run is marked stale (default: 15)
  --help, -h                  Show this help

Output (JSON):
  { "ok": true, "requeued": <n>, "dead_lettered": <n>, "stale_runs": <n> }

Behaviour:
  1. Finds claimed/running tasks with an expired lease_until.
     - If attempts < max_attempts: resets status to 'queued', clears lease fields, appends task.requeued event.
     - If attempts >= max_attempts: sets status to 'dead_letter', appends task.dead_lettered event.
  2. Finds runs in starting/running/idle status whose last heartbeat (or created_at when no heartbeat
     has been recorded) is older than --run-stale-minutes, and marks them 'stale'.

Notes:
  - Does not kill tmux sessions or spawn new agents.
  - All mutations run inside a single transaction.
  - Safe to run from cron/launchd; idempotent when there is nothing to sweep.

Examples:
  pithos sweep
  pithos sweep --lease-grace-seconds 30 --run-stale-minutes 20

Exit codes: 0 success | 2 validation error

"
`;

exports[`pithos tail --help > matches snapshot 1`] = `
"pithos tail - Show recent events

Usage:
  pithos tail [options]

Options:
  --limit <n>    Number of recent events to show (default: 20, max: 1000)
  --help, -h     Show this help

Output (JSON):
  {
    "ok": true,
    "count": 3,
    "events": [
      {
        "id": 1,
        "created_at": "2026-05-01T12:00:00Z",
        "actor_run_id": null,
        "task_id": "task_...",
        "run_id": null,
        "type": "task.created",
        "payload_json": "{}"
      },
      ...
    ]
  }

Events are ordered oldest-first (ascending by id).
task_id, run_id, and actor_run_id are null when not applicable.

Examples:
  pithos tail
  pithos tail --limit 50
  pithos tail --limit 100

Exit codes: 0 success | 2 validation error

"
`;
